# Interval-Homogeneity-Analyser

./: .editorconfig  .gitattributes  .gitignore  ANALYSIS_PRESET.md  CONTRIBUTING.md  QUICK_GUIDE.md  README.md  RELEASE_CHECKLIST.md  TECHNICAL_MANUAL.md  analysis_core.py  analyze_corpus.py  app.py  interval_analysis.py  interval_analyzer_ui.py  pitch_model.py  pyproject.toml  run.bat
.circleci/: config.yml
docs/: ARCHITECTURE.md  INTERVAL_HOMOGENEITY_REGRESSION_FIXTURES.md  METRIC_SEMANTICS.md  MUSICXML_COVERAGE.md  VALIDATION_PROTOCOL.md
iav/: __init__.py  aggregate_metrics.py  analysis_enums.py  analysis_presets.py  annotated_study.py  batch_analyze.py  canonical_corpus.py  canonical_musicxml.py  charts.py  cli.py  constants.py  metric_guide_content.py  musicxml.py  note_sources.py  note_types.py  pitch_model.py  results.py  results_aggregate_data.py  set_class_12tet.py  symbolic_profile.py  ui_params.py  ui_presets.py  ui_result_formatting.py  vertical_cardinality.py  widget_constants.py  widget_state.py  widgets.py  widgets_analysis_section.py  widgets_manual_section.py  widgets_musicxml_section.py  widgets_presets.py
installers/: README.md
notebooks/: sensitivity_report.ipynb
pages/: 1_Which_metric_to_use.py
results_batch_smoke/: config_used.json  log.txt  results.json
results_verify/: canonical_verification.json  config_used.json  log.txt  results.csv  results.json  summary_statistics.csv
scripts/: README.md  build_canonical_musicxml.py  clean_repo.ps1  clean_repo.sh  generate_canonical_expectations.py  make_release_zip.ps1  make_release_zip.sh  run_annotated_study.py  sensitivity_report.py  validation_report.py  verify_release_zip.ps1  verify_release_zip.sh
tests/: test_analysis_core.py  test_analysis_presets.py  test_annotated_study.py  test_backward_compat_shims.py  test_batch_analyze_additional.py  test_batch_cli.py  test_canonical_corpus_additional.py  test_canonical_musicxml.py  test_canonical_musicxml_additional.py  test_canonical_sonorities.py  test_charts_additional.py  test_charts_smoke.py  (+43 more)
(+82 files in other folders)
